移除 recipes/index.html 中最后一处内联样式，使用 text-center 类

--- a/recipes/index.html
+++ b/recipes/index.html
@@ -251,7 +251,7 @@
                 🔥 The Forge Calculator
             </h2>
             <p>Use our interactive calculator to test ore combinations and create custom recipes.</p>
-            <div style="text-align: center; margin: 2rem 0;">
+            <div class="text-center">
                 <a href="/" class="forge-button">
                     🔥 Go to Calculator
                 </a>
