添加 AIDirs 徽章到首页页脚

--- a/index.html
+++ b/index.html
@@ -705,6 +705,7 @@
                 <a target="_blank" href="https://poweruptools.com"><img src="https://poweruptools.com/assets/images/badge.png" alt="Power Up Tools" height="54"></a>
                 <a target="_blank" href="https://launchclash.com"><img src="https://launchclash.com/static/images/badge.png" alt="LaunchClash" height="54"/></a>
                 <a href="https://deeplaunch.io" target="_blank"><img src="https://deeplaunch.io/badge/badge_dark.svg" alt="Featured on DeepLaunch.io" width="200" height="54" /></a>
+                <a href="https://aidirs.org/item/forge-calculator" target="_blank" rel="noopener noreferrer"><img src="https://aidirs.org/badges/badge-listed-dark.svg" alt="Listed on AIDirs" /></a>
             </p>
         </div>
             
