将俄语页面中的 'The Forge Calculator' 替换为 'калькулятор the forge'

--- a/ru/crafts.html
+++ b/ru/crafts.html
@@ -204,10 +204,10 @@
     <!-- Why Section -->
     <section id="why" class="content-section">
         <div class="container">
-            <h2>Why Use The Forge Calculator?</h2>
-            <p>The Forge Roblox game has intricate forging mechanics with complex ore combinations and trait systems. The Forge Calculator solves this complexity by providing instant, accurate calculations that help you make informed decisions about your weapon and armor builds without manual calculations.</p>
+            <h2>Why Use калькулятор the forge?</h2>
+            <p>The Forge Roblox game has intricate forging mechanics with complex ore combinations and trait systems. калькулятор the forge solves this complexity by providing instant, accurate calculations that help you make informed decisions about your weapon and armor builds without manual calculations.</p>
             <p>Without The Roblox Forge Calculator, players waste valuable time manually calculating which ore combinations grant the best modifiers or determining the number of ores needed for optimal trait percentages. Our Roblox Forge calculator eliminates these frustrations by processing your inputs and presenting results in real time, showing you exactly which weapon or armor class you'll craft and how strong your traits will be.</p>
-            <p>The Forge Calculator is particularly valuable for players seeking optimal builds and trait setups. Whether you're a beginner enhancing your knowledge of the forging system or an experienced player optimizing modifier multipliers, our forge calculator acts as your personal forging assistant. By using The Forge Calculator, you can experiment with different ore combinations, verify trait activation, and ensure you achieve the best possible results before committing resources in The Forge.</p>
+            <p>калькулятор the forge is particularly valuable for players seeking optimal builds and trait setups. Whether you're a beginner enhancing your knowledge of the forging system or an experienced player optimizing modifier multipliers, our forge calculator acts as your personal forging assistant. By using калькулятор the forge, you can experiment with different ore combinations, verify trait activation, and ensure you achieve the best possible results before committing resources in The Forge.</p>
         </div>
     </section>
 
