--- a/ru/index.html
+++ b/ru/index.html
@@ -195,8 +195,8 @@
     <!-- What Is Section -->
     <section id="what-is" class="content-section">
         <div class="container">
-            <h2>What is The Forge Calculator?</h2>
-            <p>The Forge Calculator is an all-in-one tool designed specifically for players forging weapons and armor in The Forge on Roblox. Our comprehensive forge calculator helps you determine optimal ore combinations and trait setups without manual calculations. Whether you're a beginner learning the forging system or an experienced player seeking optimal builds, The Forge Calculator takes the guesswork out of crafting.</p>
+            <h2>What is калькулятор the forge?</h2>
+            <p>калькулятор the forge is an all-in-one tool designed specifically for players forging weapons and armor in The Forge on Roblox. Our comprehensive forge calculator helps you determine optimal ore combinations and trait setups without manual calculations. Whether you're a beginner learning the forging system or an experienced player seeking optimal builds, калькулятор the forge takes the guesswork out of crafting.</p>
             <p>Skip the tedious math of figuring out which ores give you the strongest modifiers or how many you need for maximum trait percentages. Our Roblox Forge calculator instantly processes your ore selections and displays real-time results. The Roblox Forge Calculator reveals your weapon or armor class, optimal ore quantities, final modifier multipliers, and trait activation status.</p>
             <p>When adding ores to The Roblox Forge Calculator tool, you'll see how strong the applied traits will be and the optimal number of ores needed to increase chances of crafting a specific weapon or armor set. Our Roblox Forge calculator interface is intuitive and user-friendly, making it accessible for all players looking to optimize their forging strategy.</p>
         </div>
@@ -205,27 +205,27 @@
     <!-- How To Section -->
     <section id="how-to" class="content-section">
         <div class="container">
-            <h2>How to Use The Forge Calculator</h2>
-            <p>Using The Forge Calculator is straightforward and designed to save you time when forging weapons and armor in Roblox. Follow these simple steps to optimize your crafting strategy:</p>
+            <h2>How to Use калькулятор the forge</h2>
+            <p>Using калькулятор the forge is straightforward and designed to save you time when forging weapons and armor in Roblox. Follow these simple steps to optimize your crafting strategy:</p>
             <ul>
-                <li><strong>Add Your Ores:</strong> Input the ores you plan to use in The Forge Calculator. The tool will process your ore combinations instantly.</li>
-                <li><strong>View Weapon/Armor Class:</strong> The Forge Calculator shows which weapon or armor class you'll craft based on your ore selection.</li>
+                <li><strong>Add Your Ores:</strong> Input the ores you plan to use in калькулятор the forge. The tool will process your ore combinations instantly.</li>
+                <li><strong>View Weapon/Armor Class:</strong> калькулятор the forge shows which weapon or armor class you'll craft based on your ore selection.</li>
                 <li><strong>Check Optimal Amounts:</strong> Our forge calculator displays the optimal ore amounts needed for your desired craft and trait percentages.</li>
-                <li><strong>Review Modifiers:</strong> See final modifier multipliers calculated by The Forge Calculator to understand your craft's potential strength.</li>
+                <li><strong>Review Modifiers:</strong> See final modifier multipliers calculated by калькулятор the forge to understand your craft's potential strength.</li>
                 <li><strong>Verify Trait Activation:</strong> The forge calculator indicates whether ore traits will be active and how strong the applied traits will be.</li>
-                <li><strong>Optimize Build:</strong> Use The Forge Calculator to experiment with different ore combinations and find the optimal setup for your weapon or armor.</li>
+                <li><strong>Optimize Build:</strong> Use калькулятор the forge to experiment with different ore combinations and find the optimal setup for your weapon or armor.</li>
             </ul>
-            <p>The Forge Calculator presents results in real time as you adjust your ore inputs. You can experiment with different combinations using our forge calculator before committing resources in The Forge, ensuring you achieve the best possible modifiers and trait setups for your builds.</p>
+            <p>калькулятор the forge presents results in real time as you adjust your ore inputs. You can experiment with different combinations using our forge calculator before committing resources in The Forge, ensuring you achieve the best possible modifiers and trait setups for your builds.</p>
         </div>
     </section>
 
     <!-- Why Section -->
     <section id="why" class="content-section">
         <div class="container">
-            <h2>Why Use The Forge Calculator?</h2>
-            <p>The Forge Roblox game has intricate forging mechanics with complex ore combinations and trait systems. The Forge Calculator solves this complexity by providing instant, accurate calculations that help you make informed decisions about your weapon and armor builds without manual calculations.</p>
+            <h2>Why Use калькулятор the forge?</h2>
+            <p>The Forge Roblox game has intricate forging mechanics with complex ore combinations and trait systems. калькулятор the forge solves this complexity by providing instant, accurate calculations that help you make informed decisions about your weapon and armor builds without manual calculations.</p>
             <p>Without The Roblox Forge Calculator, players waste valuable time manually calculating which ore combinations grant the best modifiers or determining the number of ores needed for optimal trait percentages. Our Roblox Forge calculator eliminates these frustrations by processing your inputs and presenting results in real time, showing you exactly which weapon or armor class you'll craft and how strong your traits will be.</p>
-            <p>The Forge Calculator is particularly valuable for players seeking optimal builds and trait setups. Whether you're a beginner enhancing your knowledge of the forging system or an experienced player optimizing modifier multipliers, our forge calculator acts as your personal forging assistant. By using The Forge Calculator, you can experiment with different ore combinations, verify trait activation, and ensure you achieve the best possible results before committing resources in The Forge.</p>
+            <p>калькулятор the forge is particularly valuable for players seeking optimal builds and trait setups. Whether you're a beginner enhancing your knowledge of the forging system or an experienced player optimizing modifier multipliers, our forge calculator acts as your personal forging assistant. By using калькулятор the forge, you can experiment with different ore combinations, verify trait activation, and ensure you achieve the best possible results before committing resources in The Forge.</p>
         </div>
     </section>
 
