--- a/ru/recipes/index.html
+++ b/ru/recipes/index.html
@@ -266,7 +266,7 @@
         <!-- Calculator Embed -->
         <div>
             <h2>
-                🔥 The Forge Calculator
+                🔥 калькулятор the forge
             </h2>
             <div>
                 <iframe 
