更新 codes 页面：只保留 MAZE 为有效代码，FORGWEEKEND! 移至过期列表，更新日期为 15 January 2026

--- a/codes/index.html
+++ b/codes/index.html
@@ -150,7 +150,7 @@
                 "@id": "https://forge-calculator.com/codes#itemlist",
                 "name": "Active Forge Codes January 2026",
                 "description": "Current working redeem codes for The Forge Roblox game with rewards",
-                "numberOfItems": 2,
+                "numberOfItems": 1,
                 "itemListElement": [
                     {
                         "@type": "ListItem",
@@ -214,7 +214,7 @@
         </div>
 
         <div class="update-info">
-            <strong>📅 This page was last edited on 11 January 2026</strong> | <strong>⚡ Status:</strong> All The Forge codes verified and working!
+            <strong>📅 This page was last edited on 15 January 2026</strong> | <strong>⚡ Status:</strong> All The Forge codes verified and working!
         </div>
 
         <!-- Active Codes Section -->
@@ -223,20 +223,9 @@
             
             <div class="code-card">
                 <div class="code-info">
-                    <div class="code-name">FORGWEEKEND!</div>
-                    <div class="code-reward">🎁 Reward: 10x Rerolls & 1x Miner Totem</div>
-                    <span class="code-status status-active">✓ ACTIVE</span>
-                    <span>NEW!</span>
-                </div>
-                <button class="copy-btn" onclick="copyCode('FORGWEEKEND!', event)">Copy Code</button>
-            </div>
-
-            <div class="code-card">
-                <div class="code-info">
                     <div class="code-name">MAZE</div>
                     <div class="code-reward">🎁 Reward: 5x Rerolls & 3x Fungi's Potion</div>
                     <span class="code-status status-active">✓ ACTIVE</span>
-                    <span>NEW!</span>
                 </div>
                 <button class="copy-btn" onclick="copyCode('MAZE', event)">Copy Code</button>
             </div>
@@ -250,6 +239,15 @@
         <div class="codes-section">
             <h3>❌ Expired Codes (No Longer Working)</h3>
             
+            <div class="code-card code-card-expired">
+                <div class="code-info">
+                    <div class="code-name">FORGWEEKEND!</div>
+                    <div class="code-reward">🎁 Reward: 10x Rerolls & 1x Miner Totem</div>
+                    <span class="code-status status-expired">✗ EXPIRED</span>
+                </div>
+                <button class="copy-btn" disabled>Expired</button>
+            </div>
+
             <div class="code-card code-card-expired">
                 <div class="code-info">
                     <div class="code-name">HAPPYNEWYEAR</div>
@@ -299,8 +297,8 @@
                         <label>Which code did you try?</label>
                         <select id="codeSelect" required>
                             <option value="">Select a code...</option>
-                            <option value="FORGWEEKEND!">FORGWEEKEND! (NEW!)</option>
-                            <option value="MAZE">MAZE (NEW!)</option>
+                            <option value="MAZE">MAZE</option>
+                            <option value="FORGWEEKEND!">FORGWEEKEND!</option>
                             <option value="HAPPYNEWYEAR">HAPPYNEWYEAR</option>
                             <option value="RAVEN">RAVEN</option>
                         </select>
